--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0"
+        "php": "^7.3|^8.0",
+        "oomphinc/composer-installers-extender": "*"
+    },
+    "require-dev": {
+        "oomphinc/composer-installers-extender": "*"
     },
     "autoload": {
         "psr-4": {
